--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script type="importmap">
-        {
-          "imports": {
-            "three": "https://unpkg.com/three@latest/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@latest/examples/jsm/"
-          }
-        }
-      </script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            width:100vw;
-            height:100vh;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="main.css">
 </head>
-
 <body>
-    <script type="module" src="main.js"></script>
-</body>
+  
+<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
+<script type="importmap">
+  {
+		"imports": {
+			"three": "https://unpkg.com/three@0.157.0/build/three.module.js",
+      "three/": "https://unpkg.com/three@0.157.0/",
+      "cannon-es": "https://cdn.jsdelivr.net/npm/cannon-es@0.20.0/+esm"
+		}
+	}
+</script>
+<div id="blocker">
+  <div id="instructions">
+    <button id='playBtn' style="font-size:36px">
+      Click to play
+    </button>
+    <p>
+      Move: WASD<br/>
+      Jump: SPACE<br/>
+      Look: MOUSE
+    </p>
+  </div>
+</div>
+
+<!-- <script type="module" src="main.js"></script> -->
+<script type="module" src="game.js"></script>
+<!-- <script type="module" src="script.js"></script> -->
+</body>
 </html>
