--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
 </div>
 
 <!-- <script type="module" src="main.js"></script> -->
-<script type="module" src="game.js"></script>
+<!-- <script type="module" src="game.js"></script> -->
+<script type="module" src="baby.js"></script>
 <!-- <script type="module" src="script.js"></script> -->
 </body>
 </html>
