--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <button id='playBtn' style="font-size:36px">
       Click to play
     </button>
-    <p>
+    <p id="info" style="color:black">
       Move: WASD<br/>
       Jump: SPACE<br/>
       Look: MOUSE
