--- a/public/form.html
+++ b/public/form.html
@@ -11,10 +11,10 @@
   <body>
     <form onsubmit="event.preventDefault(); return false;">
       <label for="model_name">Model Name:</label>
-      <input type="text" id="model_name" name="model_name" required /><br />
+      <input type="text" id="model_name" name="model_name" value="Testing" required /><br />
 
       <label for="seller_wallet">Seller Wallet:</label>
-      <input
+      <input value="0xE0865c948E936Fec136b180c1F29a22595E0f879"
         type="text"
         id="seller_wallet"
         name="seller_wallet"
@@ -22,12 +22,12 @@
       /><br />
 
       <label for="cost">Cost:</label>
-      <input type="number" step="0.01" id="cost" name="cost" required /><br />
+      <input type="number" value="0.01" step="0.01" id="cost" name="cost" required /><br />
 
       <label for="description">Description:</label>
-      <textarea id="description" name="description" required></textarea><br />
+      <textarea id="description" name="description" required>Testing</textarea><br />
 
-      <label for="model_file">Model File:</label>
+      <label for="model_file" >Model File:</label>
       <input
         type="file"
         id="model_file"
@@ -37,10 +37,10 @@
       /><br />
 
       <label for="tags">Tags:</label>
-      <input type="text" id="tags" name="tags" required /><br />
+      <input type="text" id="tags" value="testing" name="tags" required /><br />
 
       <label for="category">Category:</label>
-      <input type="text" id="category" name="category" required /><br />
+      <input type="text" id="category" value="testing" name="category" required /><br />
       <span id="showMsg"></span>
       <button onclick="listNFT()" id="list-button" value="Submit">
         Submit
