--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 <body>
   
 <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-
+<script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+        type="application/javascript"></script>
 <script type="importmap">
   {
 		"imports": {
@@ -35,6 +36,7 @@
 <!-- <script type="module" src="main.js"></script> -->
 <!-- <script type="module" src="game.js"></script> -->
 <script type="module" src="baby.js"></script>
+<script src="nfts.js"></script>
 <!-- <script type="module" src="script.js"></script> -->
 </body>
 </html>
