--- a/public/index.html
+++ b/public/index.html
@@ -1,67 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-</head>
-
-<body>
-
-  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-  <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <script type="importmap">
-  {
-		"imports": {
-			"three": "https://unpkg.com/three@0.157.0/build/three.module.js",
-      "three/": "https://unpkg.com/three@0.157.0/",
-      "cannon-es": "https://cdn.jsdelivr.net/npm/cannon-es@0.20.0/+esm"
-		}
-	}
-</script>
-  <div id="blocker">
-    <div id="instructions" class="w-screen h-screen">
-      <button id="playBtn" class="p-0 m-0 w-screen h-screen text-[10vmin]">Click Anywhere To Enter 3D NFT Land</button>
-      <button id="settings"
-        onclick='document.getElementById("modal").style.display = document.getElementById("modal").style.display == "block"? "none" : "block"'
-        class="absolute p-4 m-6 bg-purple-800 hover:bg-purple-700 active:bg-purple-500 rounded-lg bottom-0 right-0"><span
-          class="material-symbols-outlined">
-          settings
-        </span></button>
-        <div style='display: none;' id="modal" class="absolute bg-slate-400 bottom-[100px] right-0 p-4 m-6">
-          <button onclick="main().then(e=>{if(e){alert('Connected')}})">Connect Your Wallet</button>
+  <body>
+    <script
+      async
+      src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"
+    ></script>
+    <script
+      src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+      type="application/javascript"
+    ></script> 
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.157.0/build/three.module.js",
+          "three/": "https://unpkg.com/three@0.157.0/",
+          "cannon-es": "https://cdn.jsdelivr.net/npm/cannon-es@0.20.0/+esm"
+        }
+      }
+    </script>
+    <div id="blocker">
+      <div id="instructions" class="w-screen h-screen">
+        <button id="playBtn" class="p-0 m-0 w-screen h-screen text-[10vmin]">
+          Click Anywhere To Enter 3D NFT Land
+        </button>
+        <button
+          id="settings"
+          onclick='document.getElementById("modal").style.display = document.getElementById("modal").style.display == "block"? "none" : "block"'
+          class="absolute p-4 m-6 bg-purple-800 hover:bg-purple-700 active:bg-purple-500 rounded-lg bottom-0 right-0"
+        >
+          <span class="material-symbols-outlined"> settings </span>
+        </button>
+        <div
+          style="display: none"
+          id="modal"
+          class="absolute bg-slate-400 bottom-[100px] right-0 p-4 m-6"
+        >
+          <button onclick="()=>{main().then(e=>{if(e){alert('Connected')}})}">
+            Connect Your Wallet
+          </button>
         </div>
-      <div id="info" style="display: none;">
-        <button id="close" class="absolute right-0 w-[5vw] text-center p-6 hover:bg-red-700">X</button>
-        <div class="max-w-[95vw] p-4 text-3xl">
-          <p>Name: <span id="name"></span></p>
-          <p>Price: <span id="price"></span>MATIC</p>
-          <p>Category: <span id="cat"></span></p>
-          <p>Description: <span id="desc"></span></p>
-          <button onclick="console.log('plz add purchase function');" class="rounded-xl p-4 m-2 bg-teal-600 hover:bg-teal-500 active:bg-teal-300 absolute bottom-0 left-0 m-6" id="purchasebtn">Purchase Now!!</button>
+        <!-- <div id="info" style="display: none"> -->
+        <div id="info">
+          <button
+            id="close"
+            class="absolute right-0 w-[5vw] text-center p-6 hover:bg-red-700"
+          >
+            X
+          </button>
+          <div class="max-w-[95vw] p-4 text-3xl">
+            <p>Name: <span id="name"></span></p>
+            <p>TokenId: <span id="tokenid"></span></p>
+            <p>Price: <span id="price"></span>MATIC</p>
+            <p>Category: <span id="cat"></span></p>
+            <p>Description: <span id="desc"></span></p>
+            <button
+              onclick="purchase();"
+              class="rounded-xl p-4 m-2 bg-teal-600 hover:bg-teal-500 active:bg-teal-300 absolute bottom-0 left-0 m-6"
+              id="purchasebtn"
+            >
+              Purchase Now!!
+            </button>
+            <div id="alreadyOwned" className="text-emerald-700">
+              You are the owner of this NFT
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- <script type="module" src="main.js"></script> -->
-  <!-- <script type="module" src="game.js"></script> -->
-  <script type="module" src="baby.js"></script>
-  <script src="form.js"></script>
-  <script> 
-    main().then(e => {
-      if (e) {
-        alert('Connected',e)
-      }
-    })
-  </script>
-  <!-- <script type="module" src="script.js"></script> -->
-</body>
+    <!-- <script type="module" src="main.js"></script> -->
+    <!-- <script type="module" src="game.js"></script> -->
+    <script type="module" src="baby.js"></script>
+    <script src="form.js"></script>
+    <script>
+      const purchase = async () => {
+        document.getElementById("purchasebtn").disabled = true;
+        const MarketplaceJSON = await fetch("/Marketplace").then((res) =>
+          res.json()
+        );
+        const provider = new ethers.providers.Web3Provider(window.ethereum);
+        const signer = provider.getSigner();
+        let contract = new ethers.Contract(
+          MarketplaceJSON.address,
+          MarketplaceJSON.abi,
+          signer
+        );
+        let price = document.getElementById("price").innerHTML;
+        const tokenId = document.getElementById("tokenid").innerHTML;
+        const salePrice = ethers.utils.parseUnits(price, "ether");
+        console.log("Buying the NFT... Please Wait (Upto 5 mins)");
+        let transaction = await contract.executeSale(tokenId, {
+          value: salePrice,
+        });
+        await transaction.wait();
 
+        alert("You successfully bought the NFT!");
+      };
+    </script>
+    <!-- <script type="module" src="script.js"></script> -->
+  </body>
 </html>
