--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
               <hr class="h-px my-8  border-0  bg-gray-700">
               <button
                 onclick="purchase();"
-                class="rounded-xl p-4 m-2 bg-teal-600 hover:bg-teal-500 active:bg-teal-300 absolute bottom-0 left-0 m-6"
+                class="rounded-xl p-4 m-2 bg-teal-600 hover:bg-teal-500 active:bg-teal-300 m-6"
                 id="purchasebtn"
               >
                 Purchase Now!!
